# Flashcards

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/lessons/: lesson_01.json  lesson_02.json  lesson_03.json  lesson_04.json  lesson_05.json  lesson_06.json  lesson_07.json  lesson_08.json  lesson_09.json  lesson_10.json
data/lessons/placeholder/: lesson_01.json
src/: audio.py  characters.py  extract_table.py  generate_deck.py  models.py  stroke_order.py
templates/: card.css  recall_front.html  recognition_back.html  recognition_front.html
tests/: test_extract_table.py  test_generate.py
