[project]
name = "cpr-flashcards"
version = "0.1.0"
description = "Anki flashcard generator for New Practical Chinese Reader 3rd Edition"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "genanki>=0.13.0",
    "gTTS>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
