[project]
name = "cpr-flashcards"
version = "0.1.0"
description = "Anki flashcard generator for New Practical Chinese Reader 3rd Edition"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "genanki>=0.13.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
gtts = [
    "gTTS>=2.5.0",
]
dev = [
    "pytest>=7.0",
    "gTTS>=2.5.0",
]
